# sysdev

./: .gitignore  CMakeLists.txt  build_windows_all.ps1  build_windows_any.ps1  build_windows_i686.ps1  build_windows_x86_64.ps1  clang-format.txt
cmake-toolchains/: linux-gnu-toolchain.cmake  linux-musl-toolchain.cmake  windows-mingw-toolchain.cmake  windows-msvc-toolchain.cmake
include/: README.md
include/sysdev/: sysdev.h
scripts/: build_linux_all.sh  build_linux_any.sh  build_linux_gnu_any.sh  build_windows_all.ps1  build_windows_mingw_any.ps1  build_windows_msvc_any.ps1
src/linux/: CMakeLists.txt  NetworkCard.cpp  NetworkCard.hpp  sysdev.cpp  sysdev.pc  sysdev_gnu.pc  sysdev_musl.pc
src/windows/: CMakeLists.txt  NetworkCard.cpp  NetworkCard.hpp  StringConvert.hpp  sysdev.cpp  sysdev_msvc.pc
test/common/: sysdev.cpp
test/linux/: CMakeLists.txt
test/windows/: CMakeLists.txt  sysdev.cpp
